Production: Clean repo and prepare for Hugging Face deployment
- Remove all generated audio files and Python cache
- Add .gitignore to prevent temporary files from being committed
- Fix API integration: corrected function parameter order
- Fix voice_of_the_patient.py: removed import-time code execution
- Add error handling and fallback options in brain_of_the_doctor.py
- Add comprehensive documentation (README, DEPLOYMENT, SETUP_COMPLETE)
- Create .env.example template for users
- Optimize Dockerfile and .dockerignore
- Clean requirements.txt - remove duplicates
- Ready for Hugging Face Spaces deployment

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,3 +3,15 @@ __pycache__/
 *.pyc
 .env
 .git
+.gitignore
+*.mp3
+*.wav
+final_output*.mp3
+test_output*.mp3
+patient_voice_test.mp3
+.gradio
+.vscode
+.idea
+*.egg-info
+dist/
+build/
