--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,9 @@
-gradio
-groq
-SpeechRecognition
-python-dotenv
 gradio>=3.0
-groq
-SpeechRecognition
-python-dotenv
-gtts
-pygame
-elevenlabs
-pydub
-pyaudio
-Pillow
-pygame
+groq>=0.34.0
+SpeechRecognition>=3.14.0
+python-dotenv>=1.0.0
+gtts>=2.5.0
+pygame>=2.6.0
+elevenlabs>=2.0.0
+pydub>=0.25.0
+Pillow>=10.0.0
